# uWatch

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh  install.sh  main.c  utils.c
eye/: eye.ino
img/: FontAvenir40.h  FontAvenir60.h  font.sh
lib/: draw.c
lib/QMI8658/: CMakeLists.txt
lib/lcd/: CMakeLists.txt  lcd.h
main/: main.ino
pico-sdk/: CMakeLists.txt
uf2/: main.uf2
